# purchase-simulator

./: .gitignore  README.md
bayes/: app.py  pyproject.toml
bayes/dashboard/: dashboard.py  form.py
bayes/models/: user_store_purchase.py
bayes/simulation/: test_utils.py  user_purchase_per_store.py  utils.py
bayes/sql/: latest_4weeks_user_purchase.sql
